--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Inventory Management App</title>
+<title>FarmKenya Inventory Management App</title>
 {% endblock %}
 
 
