--- a/templates/product-balance.html
+++ b/templates/product-balance.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Inventory Managmnet App</title>
+<title>FarmKenya Inventory Managmnet App</title>
 {% endblock %}
 
 
